@@ -529,6 +529,7 @@ matrix(c("!", "hexmode",
          "open", "srcfile",
          "open", "srcfilealias",
          "open", "srcfilecopy",
+         "pickOpsMethod", "default",
          "pretty", "default",
          "print", "AsIs",
          "print", "DLLInfo",
