@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2023-03-16 r83996) -- "Unsuffered Consequences"
+R Under development (unstable) (2023-03-22 r84020) -- "Unsuffered Consequences"
 Copyright (C) 2023 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -16,7 +16,7 @@ Type 'demo()' for some demos, 'help()' for on-line help, or
 Type 'q()' to quit R.
 
 > #### Testing  UseMethod() and even more NextMethod()
-> #### -------------------- 
+> #### --------------------
 > #### i.e.,  S3 methods *only*. For S4, see  reg-S4.R
 > ##                                          ~~~~~~~~
 > 
@@ -179,4 +179,23 @@ Error in letters@foo :
 > 
 > p <- new("Person", name = "Who", age = -1)
 > stopifnot(p@name == "Who")
+> 
+> 
+> ## Some tests for `pickOpsMethod()`, called from C DispatchGroup() when 2 methods are found
+> foo_obj <- structure(1, class = "foo")
+> bar_obj <- structure(1, class = "bar")
+> 
+> `+.foo` <- function(e1, e2) "foo"
+> `+.bar` <- function(e1, e2) "bar"
+> 
+> invisible(foo_obj + bar_obj)  # Warning: Incompatible methods
+Warning message:
+Incompatible methods ("+.foo", "+.bar") for "+" 
+> 
+> pickOpsMethod.bar <- function(x, y, mx, my, cl, reverse) TRUE
+> 
+> stopifnot(exprs = {
++     identical(foo_obj + bar_obj, "bar")
++     identical(bar_obj + foo_obj, "bar")
++ })
 > 
